--- a/package.xml
+++ b/package.xml
@@ -31,5 +31,5 @@
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>message_runtime</exec_depend>
   
-  <!-- <depend>ocs2_quadruped_msgs</depend> -->
+  <depend>ocs2_quadruped_msgs</depend>
 </package>
